* se agrego el manejador de tabla de simbolos * se agrego el manejador de errores * se agrego la interfaz grafica * se agrego machote de gramatica simple

--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=C:\\analizadores\\java-cup-bin-11b-20160615\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=C:\\analizadores\\java-cup-bin-11b-20160615\\java-cup-11b.jar
+file.reference.rsyntaxtextarea.jar=C:\\analizadores\\rsyntaxtextarea.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.rsyntaxtextarea.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
