--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-cup-11b-runtime.jar=C:\\analizadores\\java-cup-bin-11b-20160615\\java-cup-11b-runtime.jar
 file.reference.java-cup-11b.jar=C:\\analizadores\\java-cup-bin-11b-20160615\\java-cup-11b.jar
+file.reference.jna-3.5.2.jar=C:\\Fuentes\\vlcj-3.0.1\\jna-3.5.2.jar
 file.reference.rsyntaxtextarea.jar=C:\\analizadores\\rsyntaxtextarea.jar
+file.reference.vlcj-3.0.1.jar=C:\\Fuentes\\vlcj-3.0.1\\vlcj-3.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b-runtime.jar}:\
     ${file.reference.java-cup-11b.jar}:\
-    ${file.reference.rsyntaxtextarea.jar}
+    ${file.reference.rsyntaxtextarea.jar}:\
+    ${file.reference.jna-3.5.2.jar}:\
+    ${file.reference.vlcj-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
